Fixed alignments for sections head-main and drama containers

--- a/style.css
+++ b/style.css
@@ -1,185 +1,172 @@
-#container{
-    background-color: rgb(248, 211, 211);
-    height: 400px;
-    width:100%;
-    display: flex;
-    flex-direction: column;
+#container {
+  background-color: rgb(248, 211, 211);
+  height: 400px;
+  width: 100%;
+  display: flex;
+  flex-direction: column;
 }
 
 
 /*head*/
-.headerbar{
-    background-color: rgb(246, 101, 130);
-    width:100%;
-    height:50px;
-    display:flex;
-    flex-direction: row;
-    justify-content: space-between;
-    align-items: center;
-    
-    
+.headerbar {
+  background-color: rgb(246, 101, 130);
+  width: 100%;
+  height: 50px;
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+  align-items: center;
+
+
 }
 
 .leftbar {
-    display: flex;
-    flex-direction: row;
-    align-items: center;
-    justify-content: space-between;  
-    width: 20em;
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  justify-content: space-between;
+  width: 20em;
 }
 
-.imagecontainer{
-             display: flex;
-             align-items: center;
-             }
-
-.text{
-    font-size:1.5em;
-    color: aliceblue;
-    width: 6em;
-    
+.imagecontainer {
+  display: flex;
+  align-items: center;
 }
 
-.items{
-    display: flex;
-    flex-direction: row;
-    align-items: center;
-    justify-content: space-between;
-    width: 10em;
+.text {
+  font-size: 1.5em;
+  color: aliceblue;
+  width: 6em;
+
 }
 
-.rightbar{
-    display: flex;
-    justify-content: center;
-    align-items: center;
+.items {
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  justify-content: space-between;
+  width: 10em;
 }
 
-.right{
-    flex-direction: row;
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-    color: rgb(244, 114, 114);
-    width: 20em;
-    }
+.rightbar {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.right {
+  flex-direction: row;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  color: rgb(244, 114, 114);
+  width: 20em;
+}
 
 
 /*main content*/
-    .head-main{
-        display: flex;
-        justify-content: center;
-        width: 100%;
-        align-items: center;
-    }
+.head-main {
+  display: flex;
+  justify-content: center;
+  width: 100%;
+  align-items: center;
+}
 
-    .leftstuff{
-        display: flex;
-        justify-content: space-around;
-        align-items: start;
-        text-align: start;
-        flex-direction: column;
-        width: 500px;
-    }
-    .context{
-        font-size: 20px;
-    }
+.leftstuff {
+  display: flex;
+  justify-content: space-around;
+  align-items: start;
+  text-align: start;
+  flex-direction: column;
+  width: 500px;
+}
 
-    .rightstuff{
-        position: absolute;
-        right: 0%;
-        padding:16px;
-    }
+.context {
+  font-size: 20px;
+}
 
-    /*drama content*/
+.rightstuff {
+  padding: 16px;
+}
 
-    .drama-container{
-        display: flex;
-    
-        justify-content:center ;
-        align-items:  center;
-        width: 100%;
-  
-  
-    }
-    .title{
-        text-align: center;
-        padding: 16px;
+/*drama content*/
 
-    }
+.drama-container {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  width: 100%;
+}
 
-    .dramas {
-        display: flex;
-        flex-direction: column;
-        align-items: center;
-        width: 300px;
-        gap: 8px;
-        padding: 24px;  
-        color: rgb(228, 161, 241);
-        text-shadow: 2px 2px 1px black;
-      }
+.title {
+  text-align: center;
+  padding: 16px;
 
-      .drama-img {
-        width: 200px;
-        text-align: center;
-      }
+}
 
-      .drama-text {
-        font-family: Arial, Helvetica, sans-serif;
-        text-align: center;
-        flex-wrap: wrap;
-        max-width: 200px;
-        font-size: 18px;
-        font-weight: bold;
-      }
+.dramas {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  width: 300px;
+  gap: 8px;
+  padding: 24px;
+  color: rgb(228, 161, 241);
+  text-shadow: 2px 2px 1px black;
+}
 
-      .contact-section {
-        display: flex;
-        flex-direction: column;
-        justify-content: center;
-        text-align: center;
-        width: 100%;
-        background-image: linear-gradient(
-            60deg,
-            rgba(57, 60, 90, 0.85),
-            rgba(180, 180, 120, 0.5)
-          ),
-          url(https://dnm.nflximg.net/api/v6/BvVbc2Wxr2w6QuoANoSpJKEIWjQ/AAAAQbnZKSnJDwj_5MfczXgSbMhhDLqb387pcgEshLqqYEJ59Immp_O0G3aHJ7lnDmPxMoGtm3QMqiV8mYunpqX23Om1Kea7-QSRSx8KMa3q7gZYFFR00DGW5Xuc0huyoOhHLtekp2RJ9HEKej1YTwtk04f_1CI.jpg?r=0ac);
-        background-position: center;
-        background-size: cover;
-      
-        font-weight: bold;
-        text-shadow: black 1px 1px;
-        color: azure;
-      }
+.drama-img {
+  width: 200px;
+  text-align: center;
+}
 
-      .contact-info {
-        display: flex;
-        justify-content: center;
-        align-items: center;
-        gap: 12px;
-        margin-bottom: 24px;
-        font-size: 20px;
-        color: azure;
-      }
+.drama-text {
+  font-family: Arial, Helvetica, sans-serif;
+  text-align: center;
+  flex-wrap: wrap;
+  max-width: 200px;
+  font-size: 18px;
+  font-weight: bold;
+}
 
-      .contact-icon {
-        height: 30px;
-        width: 30px;
-      }
+.contact-section {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  text-align: center;
+  width: 100%;
+  background-image: linear-gradient(60deg,
+      rgba(57, 60, 90, 0.85),
+      rgba(180, 180, 120, 0.5)),
+    url(https://dnm.nflximg.net/api/v6/BvVbc2Wxr2w6QuoANoSpJKEIWjQ/AAAAQbnZKSnJDwj_5MfczXgSbMhhDLqb387pcgEshLqqYEJ59Immp_O0G3aHJ7lnDmPxMoGtm3QMqiV8mYunpqX23Om1Kea7-QSRSx8KMa3q7gZYFFR00DGW5Xuc0huyoOhHLtekp2RJ9HEKej1YTwtk04f_1CI.jpg?r=0ac);
+  background-position: center;
+  background-size: cover;
 
-      /*footer*/
-      .footer{
-        text-align: center;
-        padding:16px;
-        width:100%;
-        background-color: rgb(245, 165, 171);
-        color: azure;
-      }
-      
+  font-weight: bold;
+  text-shadow: black 1px 1px;
+  color: azure;
+}
 
+.contact-info {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  gap: 12px;
+  margin-bottom: 24px;
+  font-size: 20px;
+  color: azure;
+}
 
-      
+.contact-icon {
+  height: 30px;
+  width: 30px;
+}
 
-
-
-    
+/*footer*/
+.footer {
+  text-align: center;
+  padding: 16px;
+  width: 100%;
+  background-color: rgb(245, 165, 171);
+  color: azure;
+}
